First cut at having bing map api send content back to the page

--- a/bg.html
+++ b/bg.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     fb-places-pro
-    <div id="mapDiv" style="display:none; position:absolute; height:400px; width:400px"></div>
+    <div id="mapDiv" style="position:absolute; height:400px; width:400px"></div>
   </body>
 </html>
