--- a/bg.html
+++ b/bg.html
@@ -7,7 +7,7 @@
     <script src="jquery.min.js"></script>
   </head>
   <body>
-    fb-places-pro
+    FB Wiki's Facebook Editor Helper
     <div id="mapDiv" style="position:absolute; height:400px; width:400px"></div>
   </body>
 </html>
